# MHARS_Project

./: .env.example  .gitignore  Dockerfile.backend  ENHANCEMENT_PLAN.md  MHARS_Final_Paper_FIXED.docx  MHARS_Final_Paper_FIXED_v2.docx  MHARS_Final_Paper_FIXED_v2_text.docx  MHARS_Paper_v2_Detailed_Fix_Guide.txt  MHARS_Project_Report.md  README.md  RESEARCH_ROADMAP.md  dashboard_web.html  demo.py  docker-compose.yml  project_structure.txt  pyproject.toml  requirements-core.txt  requirements-gpu.txt  requirements.txt  test_cors.py  test_health.py  test_pipeline.py  test_server.py  test_ws.py
api/: main.py
benchmarks/: __init__.py  benchmark_runner.py  evaluate.py  evaluation_metrics.py  llm_quality_eval.py  paper_figures.py  run_latency_test.py
dashboard/: package-lock.json
mhars/: __init__.py  __main__.py  alert_eval.py  anomaly_calibrator.py  auth.py  config.py  conformal.py  core.py  dashboard.py  diagnostic_agent.py  drift_monitor.py  explainability.py  health_score.py  learned_fusion.py  llm.py  machines.json  maintenance_scheduler.py  metadata_manager.py  models.py  online_adapt.py  rag_store.py  registry.py  report_generator.py  schemas.py  share_links.py  system_health.py  trainer.py  trend_analyzer.py  users.json
models/: audio_model.pt  audio_model_meta.json  autoencoder.pt  autoencoder_lstm_v2.pt  autoencoder_lstm_v2_meta.json  autoencoder_meta.json  conformal_meta.json  eval_report.json  fault_classifier.pt  fault_classifier_meta.json  isolation_forest.pkl  learned_fusion.pt  lstm.pt  lstm_adapted_engine.pt  lstm_v2.pt  lstm_v2_meta.json  models_README.md  (+4 more)
(+88 files in other folders)
